# BS1200-Python-Driver

./: BS1200 Configuration.ini  LICENSE  README.md  bs1200_cfg.json  pyproject.toml  setup.cfg
docs/: dependencies.txt
src/: bs1200_cfg.json  classes.html  packages.html
src/BS1200_driver.egg-info/: PKG-INFO  SOURCES.txt
src/bs1200/: __init__.py  can_frames.py  cfg_tools.py  configuration.py  driver.py
src/bs1200/cfg_templates/: BS1200 Configuration.ini
tests/: atp.py  bs1200_cfg.json  configtest - grant.py  configtest.py  debugtest.py  dio_test.py  readloop.py  udplistentest.py  volt_test_stdout.txt  write_volts_test.py
