[project]
name = "bs1200"
version = "1.3.6"
authors = [
    { name = "Mikhail Kharitonov", email = "mikhail.kharitonov@bloomy.com"}
]
maintainers = [
    { name = "Mikhail Kharitonov", email = "mikhail.kharitonov@bloomy.com"}
]
description= "Python interface to the Bloomy BS1200. Supports driver communication via PCAN-USB interface, and Configuration via Ethernet connection"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies = ["python-can", "uptime", "nisyscfg", "paramiko", "scp"]
classifiers= [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[options]
python_requires = ">=3.7"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project_urls]
"Homepage" = "https://github.com/BloomyControls/BS1200-Python-Driver"
"Product Page" = "https://www.bloomy.com/products/battery-management-system-testing/battery-simulator-1200"
"Bug Tracker" = "https://github.com/BloomyControls/BS1200-Python-Driver/issues"