[metadata]
name= BS1200-driver
version= 1.0.0
author= Mikhail Kharitonov
author_email= mikhail.kharitonov@bloomy.com
description= Python interface to the Bloomy BS1200
long_description= file: README.md
long_description_content_type= text/markdown
url= https://github.com/BloomyControls/BS1200-Python-Driver
project_urls=
    Bug Tracker = https://github.com/BloomyControls/BS1200-Python-Driver/issues
classifiers= 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent
[options]
package_dir= 
    = src
packages= find:
python_requires = >=3.6
install_requires =
    python-can
[options.packages.find]
where = src